--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>盤面のサイズは3×3から10×10まで選べます。</p>
     <p>対戦モードは人間同士の対戦か、人間とAI（ランダムにマークを打つだけですが、このゲームの特性上それなりに楽しめます）の対戦を選べます。</p>
     <p>カウント方法:xxxxの場合、左側のxxxと右側のxxxがそれぞれカウントされてポイントは2点となります。故にxxxxxは3ポイント相当です。</p>
-        <a href="https://github.com/uyun-hirohamada-lover" target="_blank">開発者情報</a>
+        <a href="https://github.com/Kenyu-f" target="_blank">開発者情報</a>
     <div class="controls">
       <label>盤面サイズ n:
         <input type="number" id="size" value="5" min="3" max="10" />
